--- a/meublog/blog/templates/blog/post_list.html
+++ b/meublog/blog/templates/blog/post_list.html
@@ -10,7 +10,7 @@
     <div id="container"></div>
     <script type="text/javascript">
        React.render(
-        React.createElement('p', null, 'Hello World!'),
+        React.createElement('p', null, 'ola'),
         document.getElementById('container')
     );
     </script>
